--- a/conf/char_athena.conf
+++ b/conf/char_athena.conf
@@ -205,8 +205,8 @@ db_path: db
 //===================================
 // NOTE: Requires client 2011-03-09aragexeRE or newer.
 // A window is opened before you can select your character and you will have to enter a pincode by using only your mouse.
-// Default: yes
-pincode_enabled: yes
+// Default: no
+pincode_enabled: no
 
 // How often does a user have to change his pincode?
 // 0: never (default)
@@ -218,8 +218,8 @@ pincode_changetime: 0
 pincode_maxtry: 3
 
 // Are users forced to use a pincode when the system is enabled?
-// Default: yes
-pincode_force: yes
+// Default: no
+pincode_force: no
 
 // Are repeated numbers allowed?
 // Default: no
