--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -115,3 +115,15 @@
 // -- Custom quests from official Umbalian Quests
 //npc: npc/custom/quests/sphinx_mask.txt
 //npc: npc/custom/quests/umbalian_language.txt
+
+
+//npc: npc/custom/boardquests/bountyboard.txt
+npc: npc/custom/boardquests/F_Bounty_Board.txt
+npc: npc/custom/boardquests/Payon.txt
+
+
+
+
+
+
+
