--- a/conf/char_athena.conf
+++ b/conf/char_athena.conf
@@ -21,7 +21,7 @@ wisp_server_name: Eternal Ragnarok
 // The character server connects to the login server using this IP address.
 // NOTE: This is useful when you are running behind a firewall or are on
 // a machine with multiple interfaces.
-login_ip: eternalro.ddns.net
+login_ip: 103.125.219.99
 
 // The character server listens on the interface with this IP address.
 // NOTE: This allows you to run multiple servers on multiple interfaces
@@ -34,7 +34,7 @@ login_port: 6900
 // Character Server IP
 // The IP address which clients will use to connect.
 // Set this to what your server's public IP address is.
-char_ip: eternalro.ddns.net
+char_ip: 103.125.219.99
 
 // Character Server Port
 char_port: 6121
