--- a/conf/maps_athena.conf
+++ b/conf/maps_athena.conf
@@ -1076,14 +1076,14 @@ map: iz_int04
 
 // War of Emperium TE
 // -- 2012-04-18aData_sc.gpf
-map: iz_ac01_a
-map: iz_ac02_a
-map: iz_ac01_b
-map: iz_ac02_b
-map: iz_ac01_c
-map: iz_ac02_c
-map: iz_ac01_d
-map: iz_ac02_d
+//map: iz_ac01_a
+//map: iz_ac02_a
+//map: iz_ac01_b
+//map: iz_ac02_b
+//map: iz_ac01_c
+//map: iz_ac02_c
+//map: iz_ac01_d
+//map: iz_ac02_d
 map: te_prtcas01
 map: te_prtcas02
 map: te_prtcas03
