--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -20,6 +20,11 @@
 //npc: npc/custom/item_signer.txt
 //npc: npc/custom/woe_controller.txt
 
+
+
+npc: npc/custom/eternaljobchange.txt
+npc: npc/custom/eternalwarper.txt
+
 // ----------------------- Other Scripts -----------------------
 // -- Private MVP & Branch Room
 //npc: npc/custom/etc/mvp_room.txt
