--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -24,6 +24,8 @@
 
 npc: npc/custom/eternaljobchange.txt
 npc: npc/custom/eternalwarper.txt
+npc: npc/custom/eternalhealer.txt
+
 
 // ----------------------- Other Scripts -----------------------
 // -- Private MVP & Branch Room
