--- a/conf/battle/battle.conf
+++ b/conf/battle/battle.conf
@@ -31,6 +31,7 @@ critical_rate: 100
 // Otherwise, the delay is equal to the 'attack animation' (amotion)
 attack_walk_delay: 15
 
+
 // Move-delay adjustment after being hit. (Note 2)
 // The 'can't walk' delay after being hit is calculated as a percentage of the damage animation duration.
 // NOTE: Only affects the normal delay from a single attack, not the delay added by the multihit_delay option below.
@@ -108,7 +109,7 @@ magic_defense_type: 0
 // knockback direction won't change, so e.g. if you walk north and then attack an enemy to
 // the south you will still be knocked back to the south by Firewall. Immobile monsters
 // will always be knocked back to the south as their default direction is north.
-attack_direction_change: 1
+attack_direction_change: 0
 
 // For those who is set, their innate attack element is "not elemental"
 // (100% versus on all defense-elements) (Note 3)
@@ -132,7 +133,7 @@ equip_skill_break_rate: 100
 
 // Do weapon attacks have a attack speed delay before actual damage is applied? (Note 1)
 // NOTE: The official setting is yes, even thought it degrades performance a bit.
-delay_battle_damage: yes
+delay_battle_damage: no
 
 // Are arrows/ammo consumed when used on a bow/gun?
 // 0 = No
