--- a/npc/re/scripts_athena.conf
+++ b/npc/re/scripts_athena.conf
@@ -88,7 +88,7 @@ npc: npc/re/instances/SarahAndFenrir.txt
 npc: npc/re/instances/SaraMemory.txt
 npc: npc/re/instances/WernerLaboratoryCentralRoom.txt
 npc: npc/re/instances/WolfchevLaboratory.txt
-//npc: npc/custom/official/GeffenMagicTournament.txt
+npc: npc/custom/official/GeffenMagicTournament.txt
 
 // ---------------- Kafras & Cool Event Corp. -------------------
 npc: npc/re/kafras/cool_event_corp.txt
@@ -130,7 +130,7 @@ npc: npc/re/merchants/refine.txt
 npc: npc/re/merchants/renters.txt
 npc: npc/re/merchants/shops.txt
 npc: npc/re/merchants/socket_enchant2.txt
-//npc: npc/re/merchants/ticket_refiner.txt
+npc: npc/re/merchants/ticket_refiner.txt
 //npc: npc/re/merchants/enchan_upg.txt
 //npc: npc/re/merchants/cash_trader-idRO.txt
 npc: npc/re/merchants/te_merchant.txt
