--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -25,6 +25,7 @@
 npc: npc/custom/eternaljobchange.txt
 npc: npc/custom/eternalwarper.txt
 npc: npc/custom/eternalhealer.txt
+npc: npc/custom/irosaferefiner.txt
 
 
 // ----------------------- Other Scripts -----------------------
