--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -22,11 +22,12 @@
 
 
 
-npc: npc/custom/eternaljobchange.txt
+//npc: npc/custom/eternaljobchange.txt
 npc: npc/custom/eternalwarper.txt
 //npc: npc/custom/eternalhealer.txt
 npc: npc/custom/irosaferefiner.txt
 npc: npc/custom/toeyhealer.txt
+npc: npc/custom/class1jobchange.txt
 
 
 // ----------------------- Other Scripts -----------------------
