--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -28,6 +28,7 @@ npc: npc/custom/eternalwarper.txt
 npc: npc/custom/irosaferefiner.txt
 npc: npc/custom/toeyhealer.txt
 npc: npc/custom/class1jobchange.txt
+npc: npc/custom/eternalmerge.txt
 
 
 // ----------------------- Other Scripts -----------------------
