--- a/conf/maps_athena.conf
+++ b/conf/maps_athena.conf
@@ -1348,3 +1348,10 @@ map: 2012rwc_08
 
 //------------------------- Clone Maps ---------------------------
 //------------------------- Extra Maps ---------------------------
+
+map: epay_dun00l
+map: emos_dun02h
+map: egef_dun03m
+map: eabyss_03h
+
+
