--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -30,6 +30,9 @@ npc: npc/custom/toeyhealer.txt
 npc: npc/custom/class1jobchange.txt
 npc: npc/custom/eternalmerge.txt
 
+npc: npc/custom/Gramps_Weekly_TurnIn_ET.txt
+//npc: npc/custom/Gramps_Weekly_TurnIn_rev.txt
+
 
 // ----------------------- Other Scripts -----------------------
 // -- Private MVP & Branch Room
