Add Bounty Boards, IRO Eden

--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -23,15 +23,17 @@
 
 
 //npc: npc/custom/eternaljobchange.txt
-npc: npc/custom/eternalwarper.txt
+//npc: npc/custom/eternalwarper.txt
 //npc: npc/custom/eternalhealer.txt
 npc: npc/custom/irosaferefiner.txt
 npc: npc/custom/toeyhealer.txt
 npc: npc/custom/class1jobchange.txt
 npc: npc/custom/eternalmerge.txt
+npc: npc/custom/eternalstylist.txt
 
-npc: npc/custom/Gramps_Weekly_TurnIn_ET.txt
+//npc: npc/custom/Gramps_Weekly_TurnIn_ET.txt
 //npc: npc/custom/Gramps_Weekly_TurnIn_rev.txt
+npc: npc/custom/Gramps_Weekly_TurnIn_Mod.txt
 
 
 // ----------------------- Other Scripts -----------------------
@@ -133,9 +135,22 @@ npc: npc/custom/Gramps_Weekly_TurnIn_ET.txt
 
 //npc: npc/custom/boardquests/bountyboard.txt
 npc: npc/custom/boardquests/F_Bounty_Board.txt
+npc: npc/custom/boardquests/Aldebaran.txt
+npc: npc/custom/boardquests/Brasilis.txt
+npc: npc/custom/boardquests/Comodo.txt
+npc: npc/custom/boardquests/Dicastes.txt
+npc: npc/custom/boardquests/Geffen.txt
+npc: npc/custom/boardquests/Hugel.txt
+npc: npc/custom/boardquests/Juno.txt
+npc: npc/custom/boardquests/Lighthalzen.txt
+npc: npc/custom/boardquests/Mid_Camp.txt
+npc: npc/custom/boardquests/Mora.txt
 npc: npc/custom/boardquests/Payon.txt
+npc: npc/custom/boardquests/Prontera.txt
+npc: npc/custom/boardquests/Umbala.txt
 
 
+// --------------------- Eden Scripts --------------------
 
 
 
