--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -23,7 +23,7 @@
 
 
 //npc: npc/custom/eternaljobchange.txt
-//npc: npc/custom/eternalwarper.txt
+npc: npc/custom/eternalwarper.txt
 //npc: npc/custom/eternalhealer.txt
 npc: npc/custom/irosaferefiner.txt
 npc: npc/custom/toeyhealer.txt
