--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -39,6 +39,7 @@ npc: npc/custom/Gramps_Weekly_TurnIn_Mod.txt
 
 
 npc: npc/custom/allmonsterdrop.txt
+npc: npc/custom/freecash.txt
 
 
 // ----------------------- Other Scripts -----------------------
