No freecash on first login

--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -39,7 +39,7 @@ npc: npc/custom/Gramps_Weekly_TurnIn_Mod.txt
 
 
 npc: npc/custom/allmonsterdrop.txt
-npc: npc/custom/freecash.txt
+//npc: npc/custom/freecash.txt
 
 
 // ----------------------- Other Scripts -----------------------
