--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -27,7 +27,7 @@
 npc: npc/custom/eternalwarper.txt
 //npc: npc/custom/eternalhealer.txt
 npc: npc/custom/irosaferefiner.txt
-npc: npc/custom/toeyhealer.txt
+npc: npc/custom/toeyhealab.txt
 npc: npc/custom/class1jobchange.txt
 npc: npc/custom/eternalmerge.txt
 npc: npc/custom/eternalstylist.txt
