--- a/npc/re/scripts_athena.conf
+++ b/npc/re/scripts_athena.conf
@@ -135,7 +135,7 @@ npc: npc/re/merchants/ticket_refiner.txt
 //npc: npc/re/merchants/cash_trader-idRO.txt
 npc: npc/re/merchants/te_merchant.txt
 npc: npc/re/merchants/shadow_refiner.txt
-npc: npc/re/merchants/eden_market.txt
+//npc: npc/re/merchants/eden_market.txt
 
 // --------------------------- Others ---------------------------
 npc: npc/re/other/achievements.txt
