--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -31,6 +31,9 @@ npc: npc/custom/toeyhealab.txt
 npc: npc/custom/class1jobchange.txt
 npc: npc/custom/eternalmerge.txt
 npc: npc/custom/eternalstylist.txt
+npc: npc/custom/eternalreset.txt
+
+
 
 //npc: npc/custom/Gramps_Weekly_TurnIn_ET.txt
 //npc: npc/custom/Gramps_Weekly_TurnIn_rev.txt
