Add Costumes, and YUMIKO!

--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -32,6 +32,7 @@ npc: npc/custom/class1jobchange.txt
 npc: npc/custom/eternalmerge.txt
 npc: npc/custom/eternalstylist.txt
 npc: npc/custom/eternalreset.txt
+npc: npc/custom/eternalcostume.txt
 
 
 
@@ -43,6 +44,7 @@ npc: npc/custom/Gramps_Weekly_TurnIn_Mod.txt
 
 npc: npc/custom/allmonsterdrop.txt
 //npc: npc/custom/freecash.txt
+
 
 
 // ----------------------- Other Scripts -----------------------
