--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -47,6 +47,10 @@ npc: npc/custom/allmonsterdrop.txt
 
 
 
+npc: npc/custom/tmpay.txt
+
+
+
 // ----------------------- Other Scripts -----------------------
 // -- Private MVP & Branch Room
 //npc: npc/custom/etc/mvp_room.txt
