Add NPC Instance Reset

--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -34,6 +34,8 @@ npc: npc/custom/eternalstylist.txt
 npc: npc/custom/eternalreset.txt
 npc: npc/custom/eternalcostume.txt
 
+npc: npc/custom/instancereset.txt
+
 
 
 //npc: npc/custom/Gramps_Weekly_TurnIn_ET.txt
@@ -49,6 +51,7 @@ npc: npc/custom/allmonsterdrop.txt
 
 npc: npc/custom/tmpay.txt
 npc: npc/custom/eternalpromotion.txt
+
 
 
 
