PVP Deathmatch, Fix Bio 5 npc

--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -35,7 +35,8 @@ npc: npc/custom/eternalreset.txt
 npc: npc/custom/eternalcostume.txt
 
 npc: npc/custom/instancereset.txt
-
+npc: npc/custom/pvpcashdrop.txt
+npc: npc/custom/pvpdeathmatch.txt
 
 
 //npc: npc/custom/Gramps_Weekly_TurnIn_ET.txt
